Modify services section -add color -fix font and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,14 @@ body {
 
 }
 
+p {
+    color: #dc3545;
+    font-size: 16px;
+    font-weight: 300;
+}
+
 h3 {
+    color: #41464b;
     text-transform: uppercase;
 }
 
@@ -118,4 +125,62 @@ h3 {
 #home-btn {
     animation-delay: 1s;
 
+}
+
+/*=======================================================
+             CONTENT (Generic)
+=========================================================*/
+
+.content-box {
+    padding: 60px 0 60px 0;
+}
+
+.content-title h3 {
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    margin: 0 0 30px 0;
+}
+
+.content-title-underline {
+    width: 30px;
+    height: 3px;
+    background-color: #dc3545;
+    margin: 0 auto 30px auto;
+}
+
+/*========================================================
+            SERVICES
+========================================================*/
+
+.service-item {
+    padding: 20px 0 20px 0;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.service-item-icon i {
+    color: #dc3545;;
+    float: left;
+    padding: 15px;
+    margin-right: 25px;
+    width: 75px;
+    height: 75px;
+    text-align: center;
+}
+
+.service-item:hover .service-item-icon i {
+    color: #fff;
+    background-color: #dc3545;
+}
+
+.service-item-title h3 {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 0 10px 0;
+}
+
+.service-item-desc p {
+    margin: 0;
+    padding-left: 85px;
 }
